# medida

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md
debian/: changelog  control  copyright
etc/collectd/: medida-types.db
examples/: .gitignore  medida_example1.cc
src/medida/: counter.cc  counter.h  histogram.cc  histogram.h  medida.h  meter.cc  meter.h  metered_interface.h  metric_interface.h  metric_name.cc  metric_name.h  metric_processor.cc  metric_processor.h  metrics_registry.cc  metrics_registry.h  sampling_interface.h  summarizable_interface.h  timer.cc  timer.h  timer_context.cc  timer_context.h  types.h  value.cc  value.h
src/medida/reporting/: abstract_polling_reporter.cc  abstract_polling_reporter.h  collectd_reporter.cc  collectd_reporter.h  console_reporter.cc  console_reporter.h  json_reporter.cc  json_reporter.h  udp_reporter.cc  udp_reporter.h  util.cc  util.h
src/medida/stats/: ewma.cc  ewma.h  exp_decay_sample.cc  exp_decay_sample.h  sample.h  snapshot.cc  snapshot.h  uniform_sample.cc  uniform_sample.h
test/: .gitignore  CMakeLists.txt  test_counter.cc  test_histogram.cc  test_meter.cc  test_metric_name.cc  test_metrics_registry.cc  test_timer.cc  test_value.cc
test/reporting/: collectd.conf.tmpl  test_collectd_reporter.cc  test_console_reporter.cc  test_json_reporter.cc  test_udp_reporter.cc
test/stats/: test_ewma.cc  test_exp_decay_sample.cc  test_snapshot.cc  test_uniform_sample.cc
